syntax = "proto3";

option go_package = "github.com/evrblk/monstera-example/ledger/gatewaypb";

package com.evrblk.monstera_example.ledger.gatewaypb;

service LedgerServiceApi {
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}

  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse) {}
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {}
  rpc SettleTransaction(SettleTransactionRequest) returns (SettleTransactionResponse) {}
  rpc CancelTransaction(CancelTransactionRequest) returns (CancelTransactionResponse) {}
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse) {}
}

message GetAccountRequest {
  string account_id = 1;
}
message GetAccountResponse {
  Account account = 1;
}

message CreateAccountRequest {
}

message CreateAccountResponse {
  Account account = 1;
}

message GetTransactionRequest {
  string transaction_id = 1;
}

message GetTransactionResponse {
  Transaction transaction = 1;
}

message ListTransactionsRequest {
  string account_id = 1;
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
}

message CreateTransactionRequest {
  string account_id = 1;
  int64 amount = 2;
  string description = 3;
  bool settled = 4;
}

message CreateTransactionResponse {
  Transaction transaction = 1;
}

message SettleTransactionRequest {
  string transaction_id = 1;
}

message SettleTransactionResponse {
  Transaction transaction = 1;
}

message CancelTransactionRequest {
  string transaction_id = 1;
}

message CancelTransactionResponse {
  Transaction transaction = 1;
}

message Transaction {
  string id = 1;
  int64 amount = 2;
  string description = 3;
  TransactionStatus status = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message Account {
  string id = 1;
  int64 available_balance = 2;
  int64 settled_balance = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

enum TransactionStatus {
  TRANSACTION_STATUS_INVALID = 0;
  TRANSACTION_STATUS_PENDING = 1;
  TRANSACTION_STATUS_SETTLED = 2;
  TRANSACTION_STATUS_CANCELLED = 3;
  TRANSACTION_STATUS_INSUFFICIENT_FUNDS = 4;
}
